Added temporary hack to make openlayers map refresh

--- a/src/plugins/gps/public/webcomponents/orov-map.html
+++ b/src/plugins/gps/public/webcomponents/orov-map.html
@@ -121,6 +121,11 @@
 					this.olmap.updateSize();
 					
 					console.log('openlayer-map ready');
+					
+					setTimeout( function()
+					{
+						window.dispatchEvent( new Event( "resize" ) );
+					}, 1000 );
 				});
 			},
 			
