--- a/src/plugins/gps/public/webcomponents/orov-map.html
+++ b/src/plugins/gps/public/webcomponents/orov-map.html
@@ -57,6 +57,8 @@
 	<script src="../openlayers/ol.js"></script>
 
 	<script>
+		//TODO: Add UI for uploading KML data... that zoomes to the location after the upload to make it easy to confirm the data in on the map.
+		//Perhaps, have the upload send to an OpenROV mapping service with the option for private/public to make it easy to share with the world?
 		Polymer(
 		{
 			is: 'orov-map',
