Fix data replay link

--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox-downloader.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox-downloader.html
@@ -58,7 +58,7 @@
         },
         replay: function(e){
           var model = e.model;
-          window.open("/?rp="+e.model.item.sessionID);
+          window.open("?rp="+e.model.item.sessionID);
         },        
         export_csv: function(e){
           var model = e.model;
