Filled in more default icons

--- a/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
+++ b/src/plugins/mobile-ui/public/webcomponents/grid-menu/grid-menu.html
@@ -12,6 +12,7 @@
 <link rel="import" href="../../iron-icons/maps-icons.html">
 <link rel="import" href="../../iron-icons/hardware-icons.html">
 <link rel="import" href="../../iron-icons/av-icons.html">
+<link rel="import" href="../../iron-icons/communication-icons.html">
 
 <link rel="import" href="../../iron-dropdown/iron-dropdown.html">
 
