Proper mapping of settings

--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -197,6 +197,7 @@
             //         self.$.list.dispatchEvent(new Event('iron-resize'));
             //     }, 500);
             // });
+            self.async(function() { self.$.list.dispatchEvent(new Event('iron-resize')); }, 500);
 
 
             $(self.$.keyboard).keydown(function(event) {
