Fixing issues with saving presets

--- a/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
+++ b/src/plugins/input-configurator/public/webcomponents/orov-input-configurator.html
@@ -368,6 +368,7 @@
             var self = this;
             if (self.eventEmitter) {
                 self.eventEmitter.emit('plugin.inputConfigurator.saveNewPreset', self.newPresetName);
+                self.set('saveNewPreset', false);
             }
         },
 
