--- a/src/plugins/video/public/webcomponents/orov-video.html
+++ b/src/plugins/video/public/webcomponents/orov-video.html
@@ -64,8 +64,9 @@
               callback({forwardCanvas:this.canvas});
             }
           });
-
+debugger;
           emitter.withHistory.on('CameraRegistration',function(data){
+            
             if (self.shortCircuit) {return;}            
             if (data.location!==self.location) return;
             //      self.rov.emit('CameraRegistration',{cameraLocation:'front', videoMimeType:'video/mp4', resolution:'1920x1080', framerate:30, sourcePort:service.port, sourceAddress:service.address});
@@ -100,6 +101,31 @@
                 },5000);
               }
             }
+          });
+
+          emitter.on('x-motion-jpeg.data',function(data){
+            console.log('x-motion-jpeg.data received, size: ' + data.length );
+            // if (self.shortCircuit) {return;}            
+            // if (self.$$('#camera1')===null){
+            //   return;
+            // }
+            // if(self.$$('#camera1').initialized){
+            //   self.$$('#camera1').append(new Uint8Array(data));
+            // } else {
+            //   if(!self.packetVideo_initializationInProgress){
+            //     self.packetVideo_initializationInProgress = true;
+            //     emitter.emit('request_Init_Segment',function(data){
+            //       self.$$('#camera1').init(new Uint8Array(data),function(){
+            //         packetVideo_initializationInProgress = false;
+            //         emitter.emit('video.videoElementAvailable',self.$$('#camera1').getVideoElement());
+            //       });
+            //     });
+            //     //timeout and try agian after 1 second
+            //     setTimeout(function(){
+            //       self.packetVideo_initializationInProgress = false;
+            //     },5000);
+            //   }
+            // }
           })
 
         },
