--- a/src/plugins/blackbox/public/webcomponents/orov-blackbox-downloader.html
+++ b/src/plugins/blackbox/public/webcomponents/orov-blackbox-downloader.html
@@ -13,6 +13,7 @@
         </div>
         <div class="card-actions">
           <paper-button on-click='replay'>{{__('Replay Dive')}}</paper-button>
+          <paper-button on-click='sync'>{{__('Sync')}}</paper-button>          
           <paper-button on-click='export_json'>{{__('Export JSON')}}</paper-button>
           <paper-button on-click='export_xml'>{{__('Export XML')}}</paper-button>
           <paper-button on-click='export_csv'>{{__('Export CSV')}}</paper-button>
@@ -59,7 +60,13 @@
         replay: function(e){
           var model = e.model;
           window.open("?rp="+e.model.item.sessionID);
-        },        
+        },  
+        sync: function(e){
+           var model = e.model;
+           if(this.eventEmitter !== undefined){
+             this.eventEmitter.emit('plugin-blackbox-sync-session',e.model.item.sessionID);
+           }                    
+        },      
         export_csv: function(e){
           var model = e.model;
           var options = {collection: '*', format: 'csv', sessionID: e.model.item.sessionID};
